[package]
name = "getsetters"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.6"

[profile.release]
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
